[package]
name = "netlay"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.47", features = ["derive"] }
fern = "0.7.1"
log = "0.4.28"
serde = { version = "1.0.225", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.6"
